--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "pretest": "npm run lint",
     "jest": "jest --runInBand",
     "test": "npm run jest -- --coverage",
     "test:watch": "npm run jest -- --watchAll",
@@ -34,7 +33,7 @@
     "supertest": "^4.0.2"
   },
   "jest": {
-    "testEnvironment": "node",
+    "preset": "@shelf/jest-mongodb",
     "setupFilesAfterEnv": [
       "<rootDir>/e2e/setup.js"
     ]
